--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -51,3 +51,11 @@ title: Devon Bridgeman
 		see much variance in the trend, it probably isn't changing too much over time. As we start to get more and more words 
 		we do get a few less unique words per word published in a title, although it doesn't seem to be all that big of effect.
 </div>
+
+<div class="finding">
+	<h2>
+		The longest title of a Nature Letter was 36 words
+	</h2>
+	<p><img style = "padding: 0 15px; float: left;" img src = "Longtitle.jpg" alt ="Longtitle"  height = 300 width = 300/>
+		This is the longest title that was ever published in Nature Letters. What a mouthful.
+</div>
