--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -56,6 +56,6 @@ title: Devon Bridgeman
 	<h2>
 		The longest title of a Nature Letter was 36 words
 	</h2>
-	<p><img style = "padding: 0 15px; float: left;" img src = "Longtitle.jpg" alt ="Longtitle"  height = 300 width = 300/>
+	<p><img style = "padding: 0 15px; float: left;" img src = "Longest_Title.jpg" alt ="Longest_Title"  height = 300 width = 300/>
 		This is the longest title that was ever published in Nature Letters. What a mouthful.
 </div>
