--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -57,5 +57,5 @@ title: Devon Bridgeman
 		The longest title of a Nature Letter was 36 words
 	</h2>
 	<p><img style = "padding: 0 15px; float: left;" img src = "Longest_Title.jpg" alt ="Longest_Title"  height = 300 width = 300/>
-		This is the longest title that was ever published in Nature Letters. What a mouthful.
+		This is the longest title that was ever published in Nature Letters. It's quite a mouthful.
 </div>
