--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ title: Devon Bridgeman
 		to measure metabolism.</p>
 	
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;
-		I started at ASU in 2009 with my undergraduate, and started actual lab work in 2012 as a volunteer. After a few months I 
+		I started at ASU in 2009 getting my undergraduate, and started actual lab work in 2012 as a volunteer. After a few months I 
 		was offered a position, which is when I started working a fair bit with data in Matlab. After I graduated, I started as
 		a Research Assistant in my PhD.. During my PhD. I worked on several projects, with my dissertation being on developing an 
 		inexpensive carbon dioxide colorimetric sensor. This project was mostly building a model to account for temperature, moisture, 
-		and carbon dioxide in a sensor system where none of these things could actually be measured all that well. </p>
+		and carbon dioxide in a sensor system where none of these things could actually be measured all that well by reference methods. </p>
 		
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;
 		After I graduated, I started working at TF Health Corporation, where I worked to develop the second generation of their 
