--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,8 @@ title: Devon Bridgeman
 
 <div class="blurb">
 	<h1>Projects</h1>
-	<p>Here is a brief summary of a few projects I've done.</a></p>
+	<p>I've been working with data for a number of years, but here is a selection of some of my more recent and interesting projects.
+	All of the code is available from my Github profile, but here is a bit more detail on findings and the processes behind them.</p>
 </div><!-- /.blurb -->
 
 <div class="space">
