--- a/projects/nature_scraper/index.html
+++ b/projects/nature_scraper/index.html
@@ -6,7 +6,7 @@ title: Devon Bridgeman
 	<h1>Nature Scraping</h1>
 	<p>To see the actual code used, you can go to <a href="https://github.com/dbridgem/Nature-Scrape">my Github page</a>. What I
 		did was use Beatiful Soup 4 to scrape Nature's journal archives, then extracted single tokens from the titles
-		of publications from their "Letters" selection in 5 year windows to explore a bit. It was all done in Python
+		of publications from their Letters selection in 5 year windows to explore a bit. It was all done in Python
 		with exception of the static plots below, where I've got a few insights extracted from the data.
 	</p>
 </div><!-- /.blurb -->
@@ -18,9 +18,10 @@ title: Devon Bridgeman
 	<iframe width="300" height="300" style="padding: 0 15px; float:left" src="https://www.youtube.com/embed/KNJ-Nv17IgQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 	</iframe>
 
-	<p>	From this animated bar graph showing the most popular words over time, I found a few things interesting. First, you can see 
+	<p>	From this animated bar graph showing the most popular words over time, I found a few interesting things. First, you can see 
 		that over time there are a few words that become popular and remain popular. Second, you can see that the most popular terms
-		rotate very quickly towards the beginning of the publication, and later they stabilize a fair bit. 
+		rotate very quickly towards the beginning of the publication, and later they stabilize a fair bit. It's not too surprising 
+		to see, considering how massive of a field Biochemistry has become over time.
 </div>
 
 <div class="finding">
@@ -47,9 +48,9 @@ title: Devon Bridgeman
 		There is a fairly consistent trend between the number of words and number of unique words
 	</h2>
 	<p><img style = "padding: 0 15px; float: left;" img src = "WordsVUniquewords.jpg" alt ="Image_Placeholder.png"  height = 300 width = 300/>
-		If we look at the total number of words from Nature Letters in a 5 year window, it correlates fairly well. Since we don't
-		see much variance in the trend, it probably isn't changing too much over time. As we start to get more and more words 
-		we do get a few less unique words per word published in a title, although it doesn't seem to be all that big of effect.
+		If we look at the total number of words and number of unique words from Nature Letters in a 5 year window, they correlate fairly 
+		well. Since we don't see much variance in the trend, it probably isn't changing too much over time. As we start to get more and 
+		more words we do get a few less unique words per word published in a title, although it doesn't seem to be all that big of effect.
 </div>
 
 <div class="finding">
