--- a/projects/baseline_tracking/index.html
+++ b/projects/baseline_tracking/index.html
@@ -20,7 +20,7 @@ title: Devon Bridgeman
 		get an accurate pressure reading, and that baseline is sensitive to any movement. With a handheld or wearable device, 
 		this represents a challenge. The way we work around this is the have a one-way valve on the inlet of the device, so 
 		that when the person is inhaling we are at baseline. The challenge here just becomes how to discriminate between inhalation 
-		and exhalation reliably for a very wide variety of cases. The purpose of this project was to create a gold-standard for 
+		and exhalation reliably for a very wide variety of cases. The purpose of this project was to create a gold standard for 
 		pressure processing to assess a microcontroller based method (essentially to evaluate the accuracy of our production algorithm).
 	</p>
 </div>
