--- a/projects/baseline_tracking/index.html
+++ b/projects/baseline_tracking/index.html
@@ -4,7 +4,7 @@ title: Devon Bridgeman
 ---
 <div class="blurb">
 	<h1>Baseline Tracking</h1>
-	<p>Here is a brief summary on a signal baseline tracking project. <a href="https://github.com/dbridgem/Sensor_CNN">Click 
+	<p>Here is a brief summary on a signal baseline tracking project. <a href="https://github.com/dbridgem/Breath-Baseline-Tracking">Click 
 		here to see the Github page.</a></p>
 
 </div><!-- /.blurb -->
