--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@ title: Devon Bridgeman
 		was offered a position, which is when I started working a fair bit with data in Matlab. After I graduated, I started as
 		a Research Assistant in my PhD.. During my PhD. I worked on several projects, with my dissertation being on developing an 
 		inexpensive carbon dioxide colorimetric sensor. This project was mostly building a model to account for temperature, moisture, 
-		and carbon dioxide in a sensor system where none of these things could actually be measured all that well by reference methods. </p>
+		and transport delays in a sensor system where none of these things could actually be measured all that well by reference methods. </p>
 		
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;
 		After I graduated, I started working at TF Health Corporation, where I worked to develop the second generation of their 
-		flagship product. This is when I started to branch out: At this point I'm proficient with Python, SQL, Matlab, R, HTML5, C, 
+		flagship product. This is when I started to branch out: At this point I'm proficient with Python, SQL, Matlab, R, HTML/CSS, C, 
 		and others. This is also when I started to apply more machine learning techniques. At this point I am proficient with 
 		most common machine learning techniques: linear regression, logistic regression, decision trees / random forests, support 
 		vector machines and regressions, artificial neural nets, nearest neighbor classification (KNN), and many more. </p>
 	
-	<p>I am a capable data scientist looking for my next challenge. For more detail on some related projects see the project page above 
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;
+		I am a capable data scientist looking for my next challenge. For more detail on some related projects see the project page above 
 		or take a look at my resume. Thanks for stopping by.</p>
 
 </div><!-- /.blurb -->
